Bug 37. Resolved missing padding issue on <main> element.
Main element did not have display: block set.
This meant the user agent stylesheet was responsible for making this element display: block.
IE11's user agent stylesheet does not contain <main>

--- a/Wonderland.Web/css/sass/partials/_base.scss
+++ b/Wonderland.Web/css/sass/partials/_base.scss
@@ -16,6 +16,8 @@ body {
 	@extend %padding-none;
 }
 
+main {display: block;} /* Should other HTML5 elements not be set block too? */
+
 nav, nav li, .toolbar, .toolbar li, .btn-group {
 	@extend %inline;
 	ul {
